data-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: data
  name: data
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: data
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.24.0 (4a2a0458)
      creationTimestamp: null
      labels:
        io.kompose.network/myapp: "true"
        io.kompose.service: data
    spec:
      volumes:
      - name: data-pv
        persistentVolumeClaim:
          claimName: data-pvc
      containers:
        - image: valentinsprinceana/3-tier-app:data
          name: data
          ports:
            - containerPort: 3306
          volumeMounts:
          - mountPath: "/var/lib/mysql"
            name: data-pv
          resources: {}
          args:
          - "--ignore-db-dir=lost+found"
      restartPolicy: Always
status: {}
