data-script-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: data-script
  name: data-script
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: data-script
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.24.0 (4a2a0458)
      creationTimestamp: null
      labels:
        io.kompose.network/myapp: "true"
        io.kompose.service: data-script
    spec:
      containers:
        - image: eternityrus/quotes-data-script:v1
          name: data-script
          resources: {}
      restartPolicy: Always
status: {}
